Fixed alignment of elements in create blog page

--- a/components/blog/tiptapEditor/tiptap-edit.module.scss
+++ b/components/blog/tiptapEditor/tiptap-edit.module.scss
@@ -23,11 +23,11 @@
 }
 
 .content {
-	margin: 20px;
+	// margin: 20px;
 
 	> * + * {
-    margin-top: 0.75em;
-  }
+		margin-top: 0.75em;
+	}
 
 	ul {
 		list-style: disc;
@@ -37,55 +37,53 @@
 		list-style: decimal;
 	}
 
+	ul,
+	ol {
+		padding: 0 1rem;
+	}
 
-  ul,
-  ol {
-    padding: 0 1rem;
-  }
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		line-height: 1.1;
+	}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.1;
-  }
+	code {
+		background-color: rgba(#616161, 0.1);
+		color: #616161;
+	}
 
-  code {
-    background-color: rgba(#616161, 0.1);
-    color: #616161;
-  }
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+	blockquote {
+		padding-left: 1rem;
+		border-left: 2px solid rgba(#0d0d0d, 0.1);
+	}
 
-  blockquote {
-    padding-left: 1rem;
-    border-left: 2px solid rgba(#0D0D0D, 0.1);
-  }
-
-  hr {
-    border: none;
-    border-top: 2px solid rgba(#0D0D0D, 0.1);
-    margin: 2rem 0;
-  }
-
+	hr {
+		border: none;
+		border-top: 2px solid rgba(#0d0d0d, 0.1);
+		margin: 2rem 0;
+	}
 
 	pre {
-    font-family: 'JetBrainsMono', monospace;
-    padding: 0.75rem 1rem;
-    border-radius: 0.5rem;
+		font-family: 'JetBrainsMono', monospace;
+		padding: 0.75rem 1rem;
+		border-radius: 0.5rem;
 		color: white;
 		background: #333333;
 
-    code {
-      color: inherit;
-      padding: 0;
-      background: none;
-      font-size: 0.8rem;
-    }
-  }
+		code {
+			color: inherit;
+			padding: 0;
+			background: none;
+			font-size: 0.8rem;
+		}
+	}
 }
