--- a/pages/blog/create.module.scss
+++ b/pages/blog/create.module.scss
@@ -20,6 +20,11 @@
 	// 		font-size: $f4;
 	// 	}
 	// }
+
+	.leftCol {
+		margin-right: 20px;
+	}
+
 	.rightCol {
 		margin: 0 $space-xl;
 		padding: $space-sm;
